manifests/auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: test-oidc
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    - issuer: test@example.com
      jwksUri: http://oidc-service.oidc.svc.cluster.local:8080/jwks.json
