manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-oidc
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:
    - route:
        - destination:
            host: oidc-service
            port:
              number: 8080
